# Sentinel

./: .env.example  .flake8  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  gemini-extension.json  install.ps1  install.sh  mcp.example.json  pyproject.toml  sentinel.skill
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.clinerules/: sentinel-harden.md  sentinel-logic.md  sentinel-review.md  sentinel-surface.md  sentinel.md
.codex/: config.toml  hooks.json  instructions.md
.cursor/rules/: sentinel.mdc
.cursor/skills/sentinel-diff/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: cd.yml  ci.yml  sync-skills.yml
.windsurf/rules/: sentinel.md
.windsurf/skills/sentinel-attack-graph/: SKILL.md
.windsurf/skills/sentinel-audit/: SKILL.md
.windsurf/skills/sentinel-exploit-chain/: SKILL.md
commands/: sentinel-audit.toml  sentinel-diff.toml  sentinel-review.toml  sentinel.toml
hooks/: install.ps1  install.sh  sentinel-activate.js  sentinel-statusline.ps1  sentinel-statusline.sh  uninstall.ps1  uninstall.sh
scripts/: sync_version.py
scripts/release/: README.md  bump_version.py  sync_version.py
sentinel/: __init__.py  cli.py  config.py  logging.py  main.py  mcp.py
sentinel/analyzers/: base.py
sentinel/api/: main.py
sentinel/core/: context.py  engine.py  pipeline.py  registry.py
sentinel/graph/: backend.py  builder.py  queries.py
sentinel/llm/: base.py  claude.py  openai.py  router.py
sentinel/models/: audit.py  finding.py  graph.py
sentinel/parsers/: base.py  project.py  treesitter.py
sentinel/plugins/: loader.py
sentinel/reporting/: base.py  json_reporter.py  markdown_reporter.py  sarif_reporter.py
sentinel/rules/: base.py  loader.py
sentinel/tracing/: tracer.py
skills/sentinel-trace/: SKILL.md
tests/: test_engine.py  test_version_scripts.py
(+4 files in other folders)
