[project]
name = "sentinel"
dynamic = ["version"]
description = "AI-powered contextual security auditing platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    { name = "Juanes / Wembie" },
]
keywords = ["security", "sast", "auditing", "ai", "static-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "typer>=0.12.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "networkx>=3.3",
    "httpx>=0.27.0",
    "anthropic>=0.40.0",
    "openai>=1.40.0",
    "rich>=13.7.0",
    "structlog>=24.4.0",
    "gitpython>=3.1.43",
    "mcp[cli]>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
]

[project.scripts]
sentinel = "sentinel.cli:app"
sentinel-mcp = "sentinel.mcp:run"

[tool.hatch.version]
source = "regex"
path = "VERSION"
pattern = "^(?P<version>[^\n]+)"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S101", "S603", "S607", "S608"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
